Fix link overflow

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -284,6 +284,14 @@ ul {
   overflow: hidden;
 }
 
+.product-link{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
+  max-width: 200px;
+}
+
 
 
 
